--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ panic = "abort"
 
 [package]
 name = "perlink"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,6 +14,7 @@ edition = "2021"
 [dependencies]
 fltk = "^1.3"
 isahc = "1.7"
+execute = "0.2.11"
 abserde = "0.3.3"
 serde = {version = "1.0.140", features = ["derive"]}
 window_titles = { git = "https://github.com/HiruNya/window_titles"}
