--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,24 @@ panic = "abort"
 name = "perlink"
 version = "0.1.2"
 edition = "2021"
+description = "perlink"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 fltk = "^1.3"
-isahc = "1.7"
-execute = "0.2.11"
-abserde = "0.3.3"
-serde = {version = "1.0.140", features = ["derive"]}
+app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
+isahc = { features = ["text-decoding"], default-features = false, version = "1.7" }
+# execute = "0.2.11"
+abserde = {version="0.4.1", features= ["toml"], default-features = false }
+# abserde = "0.3.3"
+serde = {version = "1.0.140", default-features = false }
 window_titles = { git = "https://github.com/HiruNya/window_titles"}
 linkify = "0.9.0"
-arboard = "2.1.1"
+arboard = { default-features = false, version = "3.1.0" }
 indexmap = { version = "1.9.1", features = ["serde"] }
+
+[package.metadata.bundle]
+name = "perlink"
+identifier = "visnk.perlink"
+#description = "perlink"
