--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,10 +14,13 @@ description = "perlink"
 
 [dependencies]
 fltk = "^1.3"
-app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
+# app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
+human-panic = { git = "https://github.com/visnkmr/save-crash-logs-rs" }
 isahc = { features = ["text-decoding"], default-features = false, version = "1.7" }
 # execute = "0.2.11"
-abserde = {version="0.4.1", features= ["toml"], default-features = false }
+# abserde = {version="0.4.1", features= ["toml"], default-features = false }
+# prefstore="0.5.0"
+prefstore={path="./../prefstore/prefstore"}
 # abserde = "0.3.3"
 serde = {version = "1.0.140", default-features = false }
 window_titles = { git = "https://github.com/HiruNya/window_titles"}
