--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,11 +16,12 @@ description = "perlink"
 fltk = "^1.3"
 # app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
 human-panic = { git = "https://github.com/visnkmr/save-crash-logs-rs" }
+prefstore = { git = "https://github.com/visnkmr/prefstore/" }
 isahc = { features = ["text-decoding"], default-features = false, version = "1.7" }
 # execute = "0.2.11"
 # abserde = {version="0.4.1", features= ["toml"], default-features = false }
 # prefstore="0.5.0"
-prefstore={path="./../prefstore/prefstore"}
+# prefstore={path="./../prefstore/prefstore"}
 # abserde = "0.3.3"
 serde = {version = "1.0.140", default-features = false }
 window_titles = { git = "https://github.com/HiruNya/window_titles"}
