--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -13,6 +13,10 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt install cmake
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
