--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -12,11 +12,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Setup cmake
+      uses: jwlawson/actions-setup-cmake@v1.13
+      with:
+        cmake-version: '3.16.x'
     - uses: actions/checkout@v2
-    - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt install cmake
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
