--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -12,10 +12,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Setup cmake
-      uses: jwlawson/actions-setup-cmake@v1.13
-      with:
-        cmake-version: '3.16.x'
+    - name: Install dependencies
+      run: |
+        sudo apt-get update
+        sudo apt-get install cmake
     - uses: actions/checkout@v2
     - name: Install Rust
       uses: actions-rs/toolchain@v1
@@ -23,7 +23,11 @@ jobs:
         profile: minimal
         toolchain: stable
     - name: Build
+      env:
+          RUST_BACKTRACE: 1
       run: cargo build --release
+    - name: Compress binary
+      run: upx --best --lzma perlink
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
