--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -15,7 +15,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install cmake
+        sudo apt-get install cmake libxft-dev 
     - uses: actions/checkout@v2
     - name: Install Rust
       uses: actions-rs/toolchain@v1
