--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -15,8 +15,8 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install cmake pkg-config libfreetype6-dev libfontconfig1-dev \
-            libxcb-xfixes0-dev libxkbcommon-dev python3
+        sudo apt-get install cmake libxft-dev libxkbcommon-dev \
+        libfreetype6-dev libfontconfig1-dev libxkbcommon-dev python3
     - uses: actions/checkout@v2
     - name: Install Rust
       uses: actions-rs/toolchain@v1
