--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -34,7 +34,7 @@ jobs:
     - name: Release
       uses: softprops/action-gh-release@v1
       with:
-        tag_name: ${{ github.sha }}
+        tag_name: ${{ github.ref }}
         name: ${{ github.event.head_commit.message }}
         draft: true
         files: |
