--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -28,7 +28,8 @@ jobs:
           targets: ${{ matrix.target }}
       - name: Install deps
         if: matrix.target == 'x86_64-unknown-linux-musl'
-        run: sudo apt-get install -y musl-tools cmake libxft-dev libxinerama-dev  \
+        run: |
+        sudo apt-get install -y musl-tools cmake libxft-dev libxinerama-dev  \
         libxcursor-dev libxfixes-dev libpango1.0-dev libpangoxft-1.0-0 libpangocairo-1.0-0
       - name: Checkout
         uses: actions/checkout@v3
