--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
-          - os: ubuntu-22.04
-            target: x86_64-unknown-linux-musl
+          # - os: ubuntu-22.04
+          #   target: x86_64-unknown-linux-musl
           - os: macos-12
             target: x86_64-apple-darwin
           - os: macos-12
@@ -27,7 +27,7 @@ jobs:
           targets: ${{ matrix.target }}
       - name: Install deps
         if: matrix.target == 'x86_64-unknown-linux-musl'
-        run: sudo apt-get install -y musl-tools cmake libxft-dev libxinerama-dev libxcursor-dev libxfixes-dev libpango1.0-dev libpangoxft-1.0-0 libpangocairo-1.0-0
+        run: sudo apt-get install -y musl-tools cmake libxft-dev libxinerama-dev libxcursor-dev libxfixes-dev libpango1.0-dev libpangoxft-1.0-0 libpangocairo-1.0-0 libssl-dev
       - name: Checkout
         uses: actions/checkout@v3
       - run: cargo fetch --target ${{ matrix.target }}
