--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -49,11 +49,18 @@ jobs:
           fi
 
           cp "target/$target/release/$name" "$release_name/"
+      - name: Get current date
+        id: date
+        run: echo "::set-output name=date::$(date +'%Y_%m_%dT%H_%M')"
       - name: Publish
         uses: softprops/action-gh-release@v1
         with:
+          tag_name: ${{ steps.date.outputs.date }}
+          name: ${{ steps.date.outputs.date }}
           draft: false
           prerelease: false
           files: "perlink*"
+          body: |
+            - ${{ github.event.head_commit.message }} ${{ github.sha }}
         env:
           GITHUB_TOKEN: ${{ secrets.RELEASE_TOKEN }}
