--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -12,8 +12,8 @@ jobs:
     strategy:
       matrix:
         include:
-          # - os: ubuntu-22.04
-          #   target: x86_64-unknown-linux-musl
+          - os: ubuntu-22.04
+            target: x86_64-unknown-linux-musl
           - os: macos-12
             target: x86_64-apple-darwin
           - os: macos-12
@@ -23,18 +23,16 @@ jobs:
     runs-on: ${{ matrix.os }}
     steps:
       - uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
       - name: Install deps
         if: matrix.target == 'x86_64-unknown-linux-musl'
         run: sudo apt-get install -y musl-tools cmake libxft-dev libxinerama-dev libxcursor-dev libxfixes-dev libpango1.0-dev libpangoxft-1.0-0 libpangocairo-1.0-0 libssl-dev
       - name: Checkout
         uses: actions/checkout@v3
-      - run: cargo fetch --target ${{ matrix.target }}
+      - run: cargo fetch
       - name: Release build
         shell: bash
         run: |
-          cargo build --release --target ${{ matrix.target }}
+          cargo build --release
       - name: Package
         shell: bash
         run: |
@@ -45,10 +43,10 @@ jobs:
           mkdir "$release_name"
 
           if [ "${{ matrix.target }}" != "x86_64-pc-windows-msvc" ]; then
-            strip "target/$target/release/$name"
+            strip "target/release/$name"
           fi
 
-          cp "target/$target/release/$name" "$release_name/"
+          cp "target/release/$name" "$release_name/"
       - name: Get current date
         id: date
         run: echo "::set-output name=date::$(date +'%Y_%m_%dT%H_%M')"
