--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -9,14 +9,47 @@ on:
 jobs:
   build:
 
-    runs-on: ubuntu-latest
+    # runs-on: ubuntu-latest
+
+    # steps:
+    # - name: Install dependencies
+    #   run: |
+    #     sudo apt-get update
+    #     sudo apt-get install cmake libxft-dev libxinerama-dev libxcursor-dev  \
+    #     libxfixes-dev libpango1.0-dev libpangoxft-1.0-0 libpangocairo-1.0-0 libssl-dev
+    # - uses: actions/checkout@v2
+    # - uses: Swatinem/rust-cache@v2.2.1
+    # - name: Install Rust
+    #   uses: dtolnay/rust-toolchain@stable
+    # - name: Build
+    #   env:
+    #     RUST_BACKTRACE: 1
+    #   run: cargo build --release
+    # - name: Compress binary
+    #   run: upx --best --lzma target/release/perlink
+    #   continue-on-error: true
+    # - name: Get current date
+    #   id: date
+    #   run: echo "::set-output name=date::$(date +'%Y_%m_%dT%H_%M')"
+    # - name: Release
+    #   uses: softprops/action-gh-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     CACHE_ON_FAILURE: true
+    #   with:
+    #     tag_name: ${{ steps.date.outputs.date }}
+    #     name: ${{ steps.date.outputs.date }}
+    #     draft: false
+    #     prerelease: false
+    #     files: |
+    #       target/release/perlink
+    #     file_name: perlink_amd64_linux
+    #     body: |
+    #       - ${{ github.event.head_commit.message }} ${{ github.sha }}
+    runs-on: windows-latest
 
     steps:
-    - name: Install dependencies
-      run: |
-        sudo apt-get update
-        sudo apt-get install cmake libxft-dev libxinerama-dev libxcursor-dev  \
-        libxfixes-dev libpango1.0-dev libpangoxft-1.0-0 libpangocairo-1.0-0 libssl-dev
+    
     - uses: actions/checkout@v2
     - uses: Swatinem/rust-cache@v2.2.1
     - name: Install Rust
@@ -25,9 +58,7 @@ jobs:
       env:
         RUST_BACKTRACE: 1
       run: cargo build --release
-    - name: Compress binary
-      run: upx --best --lzma target/release/perlink
-      continue-on-error: true
+    
     - name: Get current date
       id: date
       run: echo "::set-output name=date::$(date +'%Y_%m_%dT%H_%M')"
@@ -42,7 +73,7 @@ jobs:
         draft: false
         prerelease: false
         files: |
-          target/release/perlink
-        file_name: perlink_amd64_linux
+          target/release/perlink*
+        file_name: perlink_amd64_windows
         body: |
           - ${{ github.event.head_commit.message }} ${{ github.sha }}
