--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -46,7 +46,42 @@ jobs:
     #     file_name: perlink_amd64_linux
     #     body: |
     #       - ${{ github.event.head_commit.message }} ${{ github.sha }}
-    runs-on: windows-latest
+
+
+    # runs-on: windows-latest
+
+    # steps:
+    
+    # - uses: actions/checkout@v2
+    # - uses: Swatinem/rust-cache@v2.2.1
+    # - name: Install Rust
+    #   uses: dtolnay/rust-toolchain@stable
+    # - name: Build
+    #   env:
+    #     RUST_BACKTRACE: 1
+    #   run: cargo build --release
+    
+    # - name: Get current date
+    #   id: date
+    #   run: echo "::set-output name=date::$(date +'%Y_%m_%dT%H_%M')"
+    # - name: Release
+    #   uses: softprops/action-gh-release@v1
+    #   env:
+    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    #     CACHE_ON_FAILURE: true
+    #   with:
+    #     tag_name: ${{ steps.date.outputs.date }}
+    #     name: ${{ steps.date.outputs.date }}
+    #     draft: false
+    #     prerelease: false
+    #     files: |
+    #       target/release/perlink*
+    #     # file_name: perlink_amd64_windows
+    #     body: |
+    #       - ${{ github.event.head_commit.message }} ${{ github.sha }}
+
+
+    runs-on: macos-latest
 
     steps:
     
@@ -74,6 +109,6 @@ jobs:
         prerelease: false
         files: |
           target/release/perlink*
-        file_name: perlink_amd64_windows
+        # file_name: perlink_amd64_windows
         body: |
           - ${{ github.event.head_commit.message }} ${{ github.sha }}
