--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,28 +6,28 @@ panic = "abort"
 
 [package]
 name = "perlink"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "perlink"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-fltk = "^1.3"
+fltk = "1.4.4"
 # app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
 human-panic = { git = "https://github.com/visnkmr/save-crash-logs-rs" }
 prefstore = { git = "https://github.com/visnkmr/prefstore/" }
-isahc = { features = ["text-decoding"], default-features = false, version = "1.7" }
+isahc = { features = ["text-decoding"], default-features = false, version = "1.7.2" }
 # execute = "0.2.11"
 # abserde = {version="0.4.1", features= ["toml"], default-features = false }
 # prefstore="0.5.0"
 # prefstore={path="./../prefstore/prefstore"}
 # abserde = "0.3.3"
-serde = {version = "1.0.140", default-features = false }
+serde = {version = "1.0.163", default-features = false }
 window_titles = { git = "https://github.com/HiruNya/window_titles"}
 linkify = "0.9.0"
-arboard = { default-features = false, version = "3.1.0" }
-indexmap = { version = "1.9.1", features = ["serde"] }
+arboard = { default-features = false, version = "3.2.0" }
+indexmap = { version = "1.9.3", features = ["serde"] }
 
 [package.metadata.bundle]
 name = "perlink"
