--- a/.github/workflows/build2release.yml
+++ b/.github/workflows/build2release.yml
@@ -28,6 +28,7 @@ jobs:
         run: sudo apt-get install -y musl-tools cmake libxft-dev libxinerama-dev libxcursor-dev libxfixes-dev libpango1.0-dev libpangoxft-1.0-0 libpangocairo-1.0-0 libssl-dev
       - name: Checkout
         uses: actions/checkout@v3
+      - run: cargo clean
       - run: cargo fetch
       - name: Release build
         shell: bash
