--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,8 @@ description = "perlink"
 
 [dependencies]
 fltk = "1.4.4"
-# app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
+dotenv = "0.15.0"
+app-center = { git = "https://github.com/jeff-hiner/appcenter-rs" }
 human-panic = { git = "https://github.com/visnkmr/save-crash-logs-rs" }
 prefstore = { git = "https://github.com/visnkmr/prefstore/" }
 isahc = { features = ["text-decoding"], default-features = false, version = "1.7.2" }
@@ -28,9 +29,18 @@ window_titles = { git = "https://github.com/HiruNya/window_titles"}
 linkify = "0.9.0"
 arboard = { default-features = false, version = "3.2.0" }
 indexmap = { version = "1.9.3", features = ["serde"] }
-opentelemetry = { version="0.16", features = ["serialize", "rt-tokio"] }
-opentelemetry-jaeger = { version="0.15", features = ["rt-tokio"] }
-tokio = { version = "1.0", features = ["full"] }
+# opentelemetry = { version="0.16", features = ["serialize", "rt-tokio"] }
+# opentelemetry-jaeger = { version="0.15", features = ["rt-tokio"] }
+tokio = { version = "1.28.2", features = ["full","tracing"] }
+# opentelemetry-http="0.8.0"
+tracing="0.1.37"
+tracing-subscriber="0.3.17"
+# Implements the types defined in the Otel spec
+opentelemetry = "0.17.0"
+# Integration between the tracing crate and the opentelemetry crate
+tracing-opentelemetry = "0.17.2" 
+# Allows you to export data to Jaeger
+opentelemetry-jaeger = "0.16.0"
 
 [package.metadata.bundle]
 name = "perlink"
